--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -1,7 +1,7 @@
 @import '../global/colors.scss';
 
 .btn-div{
-  text-align: center;
+  text-align: center !important;
 };
 
 .btn{
@@ -13,11 +13,12 @@
   border-radius: 5px;
   cursor: pointer;
   transition-duration: .5s;
+  width: auto;
+  margin: auto;
 
   &:hover{
-    background-color: white;
-    color: $primary;
-    transition-duration: .5s;
+    background-color: #0079bb ;
+    border: 1px solid #0079bb;
   };
 };
 
@@ -31,11 +32,12 @@
   border-radius: 5px;
   cursor: pointer;
   transition-duration: .5s;
+  width: auto;
+  margin: auto;
 
   &:hover{
     background-color: $primary;
     color: white;
-    transition-duration: .5s;
   };
 };
 
@@ -48,11 +50,12 @@
   border-radius: 5px;
   cursor: pointer;
   transition-duration: .5s;
+  width: auto;
+  margin: auto;
 
   &:hover{
     background-color: white;
     color: $red;
-    transition-duration: .5s;
   };
 };
 
@@ -65,11 +68,12 @@
   border-radius: 5px;
   cursor: pointer;
   transition-duration: .5s;
+  width: auto;
+  margin: auto;
 
   &:hover{
     background-color: $red;
     color: white;
-    transition-duration: .5s;
   };
 };
 
@@ -82,12 +86,11 @@
   border-radius: 5px;
   cursor: pointer;
   transition-duration: .5s;
+  width: auto;
+  margin: auto;
 
   &:hover{
     background-color: white;
     color: rgb(155, 155, 155);
-    transition-duration: .5s;
   };
 };
-
-
