--- a/src/sass/global/common.scss
+++ b/src/sass/global/common.scss
@@ -40,12 +40,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .card{
   background-color: white !important;
-  width: 90%;
-  margin: auto;
-  padding: 5px 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 3px rgb(212, 212, 212);
-  position: relative;
+  width: 90% !important;
+  margin: auto !important;
+  margin-bottom: 20px!important;
+  padding: 5px 20px !important;
+  border-radius: 5px !important;
+  box-shadow: 0 0 10px 3px rgb(212, 212, 212) !important;
+  position: relative !important;
 };
 
 .card-main{
