update show done

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -459,6 +459,49 @@
   .delete-picture:hover {
     color: #585858; }
 
+.show-form {
+  width: 90%;
+  margin: auto; }
+  .show-form .editor-div {
+    border: 1px #c4c4c4 solid;
+    border-radius: 5px;
+    min-height: 300px;
+    max-height: 60vh;
+    overflow: auto; }
+  .show-form .rdw-option-wrapper {
+    min-width: 16px !important; }
+  .show-form .dates-and-picture {
+    display: flex;
+    justify-content: space-between; }
+    .show-form .dates-and-picture .dates-div {
+      width: 58%; }
+    .show-form .dates-and-picture .pictures-div {
+      width: 38%;
+      padding-left: 1rem; }
+  .show-form .div-links {
+    padding-bottom: 10px !important; }
+  .show-form .links {
+    display: flex;
+    justify-content: space-between; }
+    .show-form .links #name {
+      width: 39%; }
+    .show-form .links #link {
+      width: 39%; }
+    .show-form .links #type {
+      width: 16%; }
+    .show-form .links .remove-icon {
+      font-size: 22px;
+      vertical-align: middle;
+      margin-top: 10px;
+      width: 4%; }
+  .show-form .btn-div {
+    padding: 1rem 0; }
+    .show-form .btn-div button {
+      display: flex; }
+      .show-form .btn-div button .loading-div {
+        width: 20px;
+        margin-right: 5px; }
+
 .agenda-main .add-event {
   font-size: 50px;
   position: absolute;
@@ -571,52 +614,11 @@
     margin-left: 10px;
     vertical-align: middle; }
 
+.edit-show-main {
+  width: 60vw; }
+
 .create-show-main .ql-toolbar:first-child {
   display: none; }
-
-.create-show-main .show-form {
-  width: 90%;
-  margin: auto; }
-  .create-show-main .show-form .editor-div {
-    border: 1px #c4c4c4 solid;
-    border-radius: 5px;
-    min-height: 300px;
-    max-height: 60vh;
-    overflow: auto; }
-  .create-show-main .show-form .rdw-option-wrapper {
-    min-width: 16px !important; }
-  .create-show-main .show-form .dates-and-picture {
-    display: flex;
-    justify-content: space-between; }
-    .create-show-main .show-form .dates-and-picture .dates-div {
-      width: 58%; }
-    .create-show-main .show-form .dates-and-picture .pictures-div {
-      width: 38%;
-      padding-left: 1rem; }
-  .create-show-main .show-form .div-links {
-    padding-bottom: 10px !important; }
-  .create-show-main .show-form .links {
-    display: flex;
-    justify-content: space-between; }
-    .create-show-main .show-form .links #name {
-      width: 39%; }
-    .create-show-main .show-form .links #link {
-      width: 39%; }
-    .create-show-main .show-form .links #type {
-      width: 16%; }
-    .create-show-main .show-form .links .remove-icon {
-      font-size: 22px;
-      vertical-align: middle;
-      margin-top: 10px;
-      width: 4%; }
-
-.create-show-main .btn-div {
-  padding: 1rem 0; }
-  .create-show-main .btn-div button {
-    display: flex; }
-    .create-show-main .btn-div button .loading-div {
-      width: 20px;
-      margin-right: 5px; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
