--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -112,3 +112,46 @@
   transition: .5s; }
   .delete-picture:hover {
     color: #585858; }
+
+.show-form {
+  width: 90%;
+  margin: auto; }
+  .show-form .editor-div {
+    border: 1px #c4c4c4 solid;
+    border-radius: 5px;
+    min-height: 300px;
+    max-height: 60vh;
+    overflow: auto; }
+  .show-form .rdw-option-wrapper {
+    min-width: 16px !important; }
+  .show-form .dates-and-picture {
+    display: flex;
+    justify-content: space-between; }
+    .show-form .dates-and-picture .dates-div {
+      width: 58%; }
+    .show-form .dates-and-picture .pictures-div {
+      width: 38%;
+      padding-left: 1rem; }
+  .show-form .div-links {
+    padding-bottom: 10px !important; }
+  .show-form .links {
+    display: flex;
+    justify-content: space-between; }
+    .show-form .links #name {
+      width: 39%; }
+    .show-form .links #link {
+      width: 39%; }
+    .show-form .links #type {
+      width: 16%; }
+    .show-form .links .remove-icon {
+      font-size: 22px;
+      vertical-align: middle;
+      margin-top: 10px;
+      width: 4%; }
+  .show-form .btn-div {
+    padding: 1rem 0; }
+    .show-form .btn-div button {
+      display: flex; }
+      .show-form .btn-div button .loading-div {
+        width: 20px;
+        margin-right: 5px; }
