--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -43,8 +43,8 @@
   width: auto;
   margin: auto; }
   .btn-red:hover {
-    background-color: white;
-    color: #fa4646; }
+    background-color: #db3f3f;
+    border: 1px solid #db3f3f; }
 
 .btn-red-outlined {
   background-color: white;
@@ -73,5 +73,20 @@
   width: auto;
   margin: auto; }
   .btn-grey:hover {
-    background-color: white;
-    color: #9b9b9b; }
+    background-color: #c4c4c4;
+    border: 1px solid #c4c4c4; }
+
+.btn-grey-outlined {
+  background-color: white;
+  border: 1px solid #858585;
+  color: #858585;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: .5s;
+  width: auto;
+  margin: auto; }
+  .btn-grey-outlined:hover {
+    background-color: #9b9b9b;
+    color: white; }
