--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -54,8 +54,8 @@
   margin: auto;
 
   &:hover{
-    background-color: white;
-    color: $red;
+    background-color: rgb(219, 63, 63);
+    border: 1px solid rgb(219, 63, 63);
   };
 };
 
@@ -90,7 +90,25 @@
   margin: auto;
 
   &:hover{
-    background-color: white;
-    color: rgb(155, 155, 155);
+    background-color: rgb(196, 196, 196);
+    border: 1px solid rgb(196, 196, 196);
+  };
+};
+
+.btn-grey-outlined{
+  background-color: white;
+  border: 1px solid rgb(133, 133, 133);
+  color: rgb(133, 133, 133);
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: .5s;
+  width: auto;
+  margin: auto;
+
+  &:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
   };
 };
