--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -763,8 +763,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .loading-div {
   width: 350px;
-  margin: auto;
-  margin-top: 6rem; }
+  margin: auto; }
 
 img {
   width: 100%; }
