--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,8 +1,7 @@
-@import './sidebar.scss';
-@import './main-app.scss';
-@import './topbar.scss';
-@import './modal.scss';
-@import './create-event.scss';
-@import './button.scss';
-@import "./edit-event.scss";
+@import "./sidebar.scss";
+@import "./main-app.scss";
+@import "./topbar.scss";
+@import "./modal.scss";
+@import "./create-event.scss";
+@import "./button.scss";
 @import "./form.scss";
