--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -91,7 +91,20 @@
     background-color: #9b9b9b;
     color: white; }
 
+.size-small {
+  font-size: 12px;
+  padding: 4px 8px; }
+
 .loading-gif {
   width: 20px !important;
   vertical-align: middle;
   margin-right: 10px; }
+
+.go-back-div {
+  width: 15%; }
+  .go-back-div .go-back {
+    padding: 8px;
+    margin-top: 10px; }
+    .go-back-div .go-back svg {
+      vertical-align: middle;
+      margin-bottom: 2px; }
